fix: scrollbar styling

--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,7 @@ math {
 }
 
 ::-webkit-scrollbar {
-	height: 0.35rem;
+	height: 0.45rem;
 	width: 0.35rem;
 }
 
